# AssaultCube-cheat

./: .gitignore  CMakeLists.txt  README.md  as_cube cheat.sln
as_cube cheat/: ammo.cpp  as_cube cheat.vcxproj  as_cube cheat.vcxproj.filters  base.hpp  globals.cpp  globals.hpp  health.cpp  main.cpp
as_cube_cheat/: ammo.cpp  globals.cpp  globals.hpp  health.cpp  main.cpp  nop.cpp
